--- a/examples/minimal_project/CMakeLists.txt
+++ b/examples/minimal_project/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 project(MinimalExample LANGUAGES C CXX)
-find_package(Python3 REQUIRED)
+
+# Fix: request Python dev libraries
+find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
 find_library(M_LIB m)
+
 add_executable(main main.cpp)
 target_link_libraries(main PRIVATE Python3::Python ${M_LIB})
+
